--- a/pom.xml
+++ b/pom.xml
@@ -10,97 +10,72 @@
 	<name>alumnos-arena-persistence-groovy</name>
 	<url>http://maven.apache.org</url>
 
-	<parent>
-		<groupId>org.uqbar-project</groupId>
-		<artifactId>uqbar-parent-project</artifactId>
-		<version>1.7</version>
-	</parent>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-	<scm>
-		<connection>scm:hg:${scm.hgServer}/${project.artifactId}</connection>
-		<developerConnection>scm:hg:${scm.hgServer}/${project.artifactId}</developerConnection>
-		<url>scm:hg:${scm.hgServer}/${project.artifactId}</url>
-	</scm>
-
 	<dependencies>
 		<dependency>
-			<groupId>org.uqbar-project</groupId>
-			<artifactId>uqbar-domain</artifactId>
-			<version>3.3</version>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<version>1.8</version>
 		</dependency>
 		<dependency>
-			<groupId>uqbar</groupId>
-			<artifactId>util-commons</artifactId>
-			<version>3.0.1-SNAPSHOT</version>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.3.7</version>
 		</dependency>
 		<dependency>
-			<groupId>uqbar</groupId>
-			<artifactId>arena-pers</artifactId>
-			<version>3.0.1-SNAPSHOT</version>
+    		<groupId>org.uqbar-project</groupId>
+    		<artifactId>arena-pers</artifactId>
+    		<version>3.4.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/groovy</sourceDirectory>
+		<testSourceDirectory>src/test/groovy</testSourceDirectory>
 		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.8</version>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>src/main/groovy</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+   	        	<artifactId>maven-compiler-plugin</artifactId>
+   	    	    <version>3.1</version>
+   		        <configuration>
+   	            	<source>1.7</source>
+	                <target>1.7</target>
+    	            <compilerId>groovy-eclipse-compiler</compilerId>
+        	        <verbose>true</verbose>
+            	    <extensions>true</extensions>
+            	</configuration>
+	            <dependencies>
+    	            <dependency>
+        	            <groupId>org.codehaus.groovy</groupId>
+            	        <artifactId>groovy-eclipse-compiler</artifactId>
+                	    <version>2.7.0-01</version>
+	                </dependency>
+                	<dependency>
+                    	<groupId>org.codehaus.groovy</groupId>
+                    	<artifactId>groovy-eclipse-batch</artifactId>
+                    	<version>2.1.8-01</version>
+                	</dependency>
+    	        </dependencies>
+        	</plugin>
+        	<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-eclipse-plugin</artifactId>
+    	        <version>2.8</version>
+        	    <configuration>
+            	    <additionalProjectnatures>
+                	    <projectnature>org.eclipse.jdt.groovy.core.groovyNature</projectnature>
+                	</additionalProjectnatures>
+	                <sourceIncludes>
+    	                <sourceInclude>**/*.groovy</sourceInclude>
+        	        </sourceIncludes>
+            	</configuration>
+        	</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											build-helper-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.8,)
-										</versionRange>
-										<goals>
-											<goal>add-source</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 
 </project>
